fix: prevent website from inheriting browser dark mode

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -5,6 +5,9 @@
 :root {
   --background: #ffffff;
   --foreground: #171717;
+ 
+    color-scheme: light !important;
+  
 }
 
 @media (prefers-color-scheme: dark) {
